force-app/main/default/objects/AI_Request_Log__c/AI_Request_Log__c.object-meta.xml
<CustomObject>
    <description>Logs every AI/LLM request for audit, cost tracking, and troubleshooting.</description>
    <label>AI Request Log</label>
    <nameField>
        <displayFormat>ARL-{000000}</displayFormat>
        <label>AI Request Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>