force-app/main/default/objects/AI_Request_Log__c/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>