force-app/main/default/objects/AI_Request_Log__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Coaching</fullName><default>false</default><label>Coaching</label></value>
            <value><fullName>Explanation</fullName><default>false</default><label>Explanation</label></value>
            <value><fullName>Dispute</fullName><default>false</default><label>Dispute</label></value>
            <value><fullName>NL_Editing</fullName><default>false</default><label>NL Editing</label></value>
            <value><fullName>Close_Probability</fullName><default>false</default><label>Close Probability</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>