force-app/main/default/objects/AI_Request_Log__c/fields/Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Ms__c</fullName>
    <label>Latency (ms)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>