force-app/main/default/objects/AI_Request_Log__c/fields/Model_Used__c.field-meta.xml
<CustomField>
    <fullName>Model_Used__c</fullName>
    <label>Model Used</label>
    <type>Text</type>
    <length>100</length>
</CustomField>