force-app/main/default/objects/AI_Request_Log__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Lookup</type>
    <referenceTo>AI_Provider_Config__c</referenceTo>
    <relationshipLabel>Request Logs</relationshipLabel>
    <relationshipName>Request_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>