force-app/main/default/objects/AI_Request_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>