force-app/main/default/objects/AI_Request_Log__c/fields/Request_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Request_Prompt__c</fullName>
    <label>Request Prompt</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>