force-app/main/default/objects/AI_Request_Log__c/fields/Response_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Text__c</fullName>
    <label>Response Text</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>