force-app/main/default/objects/AI_Request_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
            <value><fullName>Timeout</fullName><default>false</default><label>Timeout</label></value>
            <value><fullName>Rate_Limited</fullName><default>false</default><label>Rate Limited</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>