force-app/main/default/objects/AI_Request_Log__c/fields/Tokens_In__c.field-meta.xml
<CustomField>
    <fullName>Tokens_In__c</fullName>
    <label>Tokens In</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>