force-app/main/default/objects/AI_Request_Log__c/fields/Tokens_Out__c.field-meta.xml
<CustomField>
    <fullName>Tokens_Out__c</fullName>
    <label>Tokens Out</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>