force-app/main/default/objects/AI_Request_Log__c/fields/Was_Anonymized__c.field-meta.xml
<CustomField>
    <fullName>Was_Anonymized__c</fullName>
    <label>Was Anonymized</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>